# neuralMOVES

./: .gitignore  CITATION.bib  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: comprehensive_usage_guide.ipynb  fleet_analysis_guide.ipynb
scripts/: extract_moves_defaults.py
src/neuralmoves/: __about__.py  __init__.py  api.py  config.py  cycles.py  emission_calculation.py  error_lookup.csv  fleet.py  geography.py  idling_emissions.csv  loaders.py  model.py  scenarios.py  technology.py  temporal.py
src/neuralmoves/NN_3/: NN_model_2009_11_1.pt  NN_model_2009_21_1.pt  NN_model_2009_21_2.pt  NN_model_2009_31_1.pt  NN_model_2009_31_2.pt  NN_model_2009_32_1.pt  NN_model_2009_32_2.pt  NN_model_2009_42_1.pt  NN_model_2009_42_2.pt  NN_model_2010_11_1.pt  NN_model_2010_21_1.pt  NN_model_2010_21_2.pt  NN_model_2010_31_1.pt  NN_model_2010_31_2.pt  NN_model_2010_32_1.pt  NN_model_2010_32_2.pt  NN_model_2010_42_1.pt  NN_model_2010_42_2.pt  NN_model_2011_11_1.pt  NN_model_2011_21_1.pt  NN_model_2011_21_2.pt  NN_model_2011_31_1.pt  NN_model_2011_31_2.pt  NN_model_2011_32_1.pt  NN_model_2011_32_2.pt  NN_model_2011_42_1.pt  NN_model_2011_42_2.pt  NN_model_2012_11_1.pt  NN_model_2012_21_1.pt  NN_model_2012_21_2.pt  NN_model_2012_31_1.pt  NN_model_2012_31_2.pt  NN_model_2012_32_1.pt  NN_model_2012_32_2.pt  NN_model_2012_42_1.pt  NN_model_2012_42_2.pt  NN_model_2013_11_1.pt  NN_model_2013_21_1.pt  NN_model_2013_21_2.pt  NN_model_2013_31_1.pt  (+59 more)
src/neuralmoves/defaults/: __init__.py  _loader.py  age_distribution.csv  avg_speed_distribution.csv  county_meteorology.csv  day_vmt_fraction.csv  hour_vmt_fraction.csv  hpms_vtype_year.csv  month_vmt_fraction.csv  sample_vehicle_population.csv  source_type_population.csv
tests/: test_aggregation_layers.py
