[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neuralmoves"
version = "0.2.0"
description = "NeuralMOVES: lightweight microscopic surrogate of MOVES running-exhaust CO₂"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Edgar Ramírez Sánchez", email = "edgarrs@mit.edu" }]
keywords = ["emissions", "MOVES", "transportation", "surrogate", "CO2"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
]
# Torch is needed at runtime for model inference
dependencies = [
  "torch>=1.13",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/edgar-rs/neuralMOVES"
Issues = "https://github.com/edgar-rs/neuralMOVES/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralmoves"]
# include non-code resources inside the package
# (weights, csvs, typing marker)
include = [
  "src/neuralmoves/idling_emissions.csv",
  "src/neuralmoves/error_lookup.csv",
  "src/neuralmoves/NN_3/*.pt",
  "src/neuralmoves/py.typed",
]

[tool.hatch.build]
exclude = [
  "tests",
  ".github",
]
