[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "neuralmoves"
version = "0.4.0"
description = "NeuralMOVES: lightweight microscopic surrogate of EPA MOVES for vehicle CO₂ emissions with fleet-level aggregation layers"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Edgar Ramírez Sánchez", email = "edgarrs@mit.edu" }
]
keywords = [
    "emissions",
    "MOVES",
    "transportation",
    "CO2",
    "vehicle",
    "neural-network",
    "surrogate-model",
    "fleet",
    "EV",
    "policy-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

dependencies = [
    "torch>=1.13",
    "numpy>=1.20,<2",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/edgar-rs/neuralMOVES"
Documentation = "https://github.com/edgar-rs/neuralMOVES#readme"
Issues = "https://github.com/edgar-rs/neuralMOVES/issues"
Source = "https://github.com/edgar-rs/neuralMOVES"

[tool.hatch.build.targets.wheel]
packages = ["src/neuralmoves"]

[tool.hatch.build.targets.wheel.force-include]
"src/neuralmoves/NN_3" = "neuralmoves/NN_3"
"src/neuralmoves/idling_emissions.csv" = "neuralmoves/idling_emissions.csv"
"src/neuralmoves/defaults" = "neuralmoves/defaults"

[tool.hatch.build]
exclude = [
    "tests/",
    ".github/",
    "*.ipynb",
    "__pycache__/",
]
